--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ button:hover {
 }
 
 /* media queries */
+/* Sudhanshu Rai media queries */
 
 @media only screen and (max-width: 800px) {
   .items {
